# pyscihub

./: .bumpversion.cfg  .gitignore  .pyup.yml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  demo.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-build.yml
docs/: API.rst  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pyscihub/: __init__.py  cli.py  pyscihub.py  tools.py
src/pyscihub/: __init__.py  pyscihub.py  tools.py
tests/: __init__.py  test_pyscihub.py
tests/data/demo_pdfs/: pdf_paths.csv
